--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./img/favicon.ico">
+    <link rel="icon" href="icon.png">
     <title>Firefaucet</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" crossorigin="anonymous" />
@@ -18,7 +18,7 @@
    
     <div class="rpanel">
       <h1 class="title">Firefaucet</h1><br>
-            <img id="logo" src="favicon.webp" alt="" width="100" height="auto"><br><br>
+            <img id="logo" src="icon.png" alt="" width="100" height="auto"><br><br>
             <form>
                 <input type="text" class="input" id="ducoUsername" name="firstname" placeholder="Your duinocoin wallet username" required="required"><br>
                 <button type="submit" id="getDucosButton" onclick="formValidation(); return false;">Get DUCO ᕲ</button>
