--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<span>this is testing won't give duco until I Reverify</span>
 <head>	
   <script src="./js/script.js"></script>
     <meta charset="UTF-8">
